Bug 1771524 - Enable idlharness-shadowrealm WPT tests r=saschanaz
Differential Revision: https://phabricator.services.mozilla.com/D160090

--- a/testing/web-platform/meta/console/idlharness-shadowrealm.window.js.ini
+++ b/testing/web-platform/meta/console/idlharness-shadowrealm.window.js.ini
@@ -1,4 +1,78 @@
 [idlharness-shadowrealm.window.html]
+  prefs: [javascript.options.experimental.shadow_realms:true]
   expected:
     if (os == "android") and fission: [ERROR, TIMEOUT]
-    ERROR
+  [console namespace: property descriptor]
+    expected: FAIL
+
+  [console namespace: [[Extensible\]\] is true]
+    expected: FAIL
+
+  [console namespace: [[Prototype\]\] is Object.prototype]
+    expected: FAIL
+
+  [console namespace: typeof is "object"]
+    expected: FAIL
+
+  [console namespace: has no length property]
+    expected: FAIL
+
+  [console namespace: has no name property]
+    expected: FAIL
+
+  [console namespace: operation assert(optional boolean, any...)]
+    expected: FAIL
+
+  [console namespace: operation clear()]
+    expected: FAIL
+
+  [console namespace: operation debug(any...)]
+    expected: FAIL
+
+  [console namespace: operation error(any...)]
+    expected: FAIL
+
+  [console namespace: operation info(any...)]
+    expected: FAIL
+
+  [console namespace: operation log(any...)]
+    expected: FAIL
+
+  [console namespace: operation table(optional any, optional sequence<DOMString>)]
+    expected: FAIL
+
+  [console namespace: operation trace(any...)]
+    expected: FAIL
+
+  [console namespace: operation warn(any...)]
+    expected: FAIL
+
+  [console namespace: operation dir(optional any, optional object?)]
+    expected: FAIL
+
+  [console namespace: operation dirxml(any...)]
+    expected: FAIL
+
+  [console namespace: operation count(optional DOMString)]
+    expected: FAIL
+
+  [console namespace: operation countReset(optional DOMString)]
+    expected: FAIL
+
+  [console namespace: operation group(any...)]
+    expected: FAIL
+
+  [console namespace: operation groupCollapsed(any...)]
+    expected: FAIL
+
+  [console namespace: operation groupEnd()]
+    expected: FAIL
+
+  [console namespace: operation time(optional DOMString)]
+    expected: FAIL
+
+  [console namespace: operation timeLog(optional DOMString, any...)]
+    expected: FAIL
+
+  [console namespace: operation timeEnd(optional DOMString)]
+    expected: FAIL
