--- a/testing/web-platform/meta/dom/idlharness-shadowrealm.window.js.ini
+++ b/testing/web-platform/meta/dom/idlharness-shadowrealm.window.js.ini
@@ -1,2 +1,205 @@
 [idlharness-shadowrealm.window.html]
-  expected: ERROR
+  prefs: [javascript.options.experimental.shadow_realms:true]
+  [Event interface: existence and properties of interface object]
+    expected: FAIL
+
+  [Event interface object length]
+    expected: FAIL
+
+  [Event interface object name]
+    expected: FAIL
+
+  [Event interface: existence and properties of interface prototype object]
+    expected: FAIL
+
+  [Event interface: existence and properties of interface prototype object's "constructor" property]
+    expected: FAIL
+
+  [Event interface: existence and properties of interface prototype object's @@unscopables property]
+    expected: FAIL
+
+  [Event interface: attribute type]
+    expected: FAIL
+
+  [Event interface: attribute target]
+    expected: FAIL
+
+  [Event interface: attribute srcElement]
+    expected: FAIL
+
+  [Event interface: attribute currentTarget]
+    expected: FAIL
+
+  [Event interface: operation composedPath()]
+    expected: FAIL
+
+  [Event interface: constant NONE on interface object]
+    expected: FAIL
+
+  [Event interface: constant NONE on interface prototype object]
+    expected: FAIL
+
+  [Event interface: constant CAPTURING_PHASE on interface object]
+    expected: FAIL
+
+  [Event interface: constant CAPTURING_PHASE on interface prototype object]
+    expected: FAIL
+
+  [Event interface: constant AT_TARGET on interface object]
+    expected: FAIL
+
+  [Event interface: constant AT_TARGET on interface prototype object]
+    expected: FAIL
+
+  [Event interface: constant BUBBLING_PHASE on interface object]
+    expected: FAIL
+
+  [Event interface: constant BUBBLING_PHASE on interface prototype object]
+    expected: FAIL
+
+  [Event interface: attribute eventPhase]
+    expected: FAIL
+
+  [Event interface: operation stopPropagation()]
+    expected: FAIL
+
+  [Event interface: attribute cancelBubble]
+    expected: FAIL
+
+  [Event interface: operation stopImmediatePropagation()]
+    expected: FAIL
+
+  [Event interface: attribute bubbles]
+    expected: FAIL
+
+  [Event interface: attribute cancelable]
+    expected: FAIL
+
+  [Event interface: attribute returnValue]
+    expected: FAIL
+
+  [Event interface: operation preventDefault()]
+    expected: FAIL
+
+  [Event interface: attribute defaultPrevented]
+    expected: FAIL
+
+  [Event interface: attribute composed]
+    expected: FAIL
+
+  [Event interface: attribute timeStamp]
+    expected: FAIL
+
+  [Event interface: operation initEvent(DOMString, optional boolean, optional boolean)]
+    expected: FAIL
+
+  [CustomEvent interface: existence and properties of interface object]
+    expected: FAIL
+
+  [CustomEvent interface object length]
+    expected: FAIL
+
+  [CustomEvent interface object name]
+    expected: FAIL
+
+  [CustomEvent interface: existence and properties of interface prototype object]
+    expected: FAIL
+
+  [CustomEvent interface: existence and properties of interface prototype object's "constructor" property]
+    expected: FAIL
+
+  [CustomEvent interface: existence and properties of interface prototype object's @@unscopables property]
+    expected: FAIL
+
+  [CustomEvent interface: attribute detail]
+    expected: FAIL
+
+  [CustomEvent interface: operation initCustomEvent(DOMString, optional boolean, optional boolean, optional any)]
+    expected: FAIL
+
+  [EventTarget interface: existence and properties of interface object]
+    expected: FAIL
+
+  [EventTarget interface object length]
+    expected: FAIL
+
+  [EventTarget interface object name]
+    expected: FAIL
+
+  [EventTarget interface: existence and properties of interface prototype object]
+    expected: FAIL
+
+  [EventTarget interface: existence and properties of interface prototype object's "constructor" property]
+    expected: FAIL
+
+  [EventTarget interface: existence and properties of interface prototype object's @@unscopables property]
+    expected: FAIL
+
+  [EventTarget interface: operation addEventListener(DOMString, EventListener?, optional (AddEventListenerOptions or boolean))]
+    expected: FAIL
+
+  [EventTarget interface: operation removeEventListener(DOMString, EventListener?, optional (EventListenerOptions or boolean))]
+    expected: FAIL
+
+  [EventTarget interface: operation dispatchEvent(Event)]
+    expected: FAIL
+
+  [AbortController interface: existence and properties of interface object]
+    expected: FAIL
+
+  [AbortController interface object length]
+    expected: FAIL
+
+  [AbortController interface object name]
+    expected: FAIL
+
+  [AbortController interface: existence and properties of interface prototype object]
+    expected: FAIL
+
+  [AbortController interface: existence and properties of interface prototype object's "constructor" property]
+    expected: FAIL
+
+  [AbortController interface: existence and properties of interface prototype object's @@unscopables property]
+    expected: FAIL
+
+  [AbortController interface: attribute signal]
+    expected: FAIL
+
+  [AbortController interface: operation abort(optional any)]
+    expected: FAIL
+
+  [AbortSignal interface: existence and properties of interface object]
+    expected: FAIL
+
+  [AbortSignal interface object length]
+    expected: FAIL
+
+  [AbortSignal interface object name]
+    expected: FAIL
+
+  [AbortSignal interface: existence and properties of interface prototype object]
+    expected: FAIL
+
+  [AbortSignal interface: existence and properties of interface prototype object's "constructor" property]
+    expected: FAIL
+
+  [AbortSignal interface: existence and properties of interface prototype object's @@unscopables property]
+    expected: FAIL
+
+  [AbortSignal interface: operation abort(optional any)]
+    expected: FAIL
+
+  [AbortSignal interface: member timeout]
+    expected: FAIL
+
+  [AbortSignal interface: attribute aborted]
+    expected: FAIL
+
+  [AbortSignal interface: attribute reason]
+    expected: FAIL
+
+  [AbortSignal interface: operation throwIfAborted()]
+    expected: FAIL
+
+  [AbortSignal interface: attribute onabort]
+    expected: FAIL
