--- a/testing/web-platform/meta/encoding/idlharness-shadowrealm.window.js.ini
+++ b/testing/web-platform/meta/encoding/idlharness-shadowrealm.window.js.ini
@@ -1,4 +1,60 @@
 [idlharness-shadowrealm.window.html]
+  prefs: [javascript.options.experimental.shadow_realms:true]
   expected:
     if (os == "android") and fission: [ERROR, TIMEOUT]
-    ERROR
+  [TextDecoder interface: existence and properties of interface object]
+    expected: FAIL
+
+  [TextDecoder interface object length]
+    expected: FAIL
+
+  [TextDecoder interface object name]
+    expected: FAIL
+
+  [TextDecoder interface: existence and properties of interface prototype object]
+    expected: FAIL
+
+  [TextDecoder interface: existence and properties of interface prototype object's "constructor" property]
+    expected: FAIL
+
+  [TextDecoder interface: existence and properties of interface prototype object's @@unscopables property]
+    expected: FAIL
+
+  [TextDecoder interface: operation decode(optional BufferSource, optional TextDecodeOptions)]
+    expected: FAIL
+
+  [TextDecoder interface: attribute encoding]
+    expected: FAIL
+
+  [TextDecoder interface: attribute fatal]
+    expected: FAIL
+
+  [TextDecoder interface: attribute ignoreBOM]
+    expected: FAIL
+
+  [TextEncoder interface: existence and properties of interface object]
+    expected: FAIL
+
+  [TextEncoder interface object length]
+    expected: FAIL
+
+  [TextEncoder interface object name]
+    expected: FAIL
+
+  [TextEncoder interface: existence and properties of interface prototype object]
+    expected: FAIL
+
+  [TextEncoder interface: existence and properties of interface prototype object's "constructor" property]
+    expected: FAIL
+
+  [TextEncoder interface: existence and properties of interface prototype object's @@unscopables property]
+    expected: FAIL
+
+  [TextEncoder interface: operation encode(optional USVString)]
+    expected: FAIL
+
+  [TextEncoder interface: operation encodeInto(USVString, Uint8Array)]
+    expected: FAIL
+
+  [TextEncoder interface: attribute encoding]
+    expected: FAIL
